# EIU-FABLAB-UAV-AUTONOMY

./: .gitignore  README.md
Robot_Fundamentals/Math_Review/: review_math_0_trig.ipynb  review_math_1.ipynb
gimbal_ground_station/: CMakeLists.txt  package.xml  resources.qrc
gimbal_ground_station/include/gimbal_ground_station/: gimbal_controller.hpp  ros_gimbal_state_bridge.hpp  serial_bridge.hpp
gimbal_ground_station/qml/: main.qml
gimbal_ground_station/qml/components/: AttitudeBox.qml  GimbalPanel.qml  GimbalSlider.qml  Joystick.qml  PtzButton.qml  SerialPanel.qml  VelGauge.qml
gimbal_ground_station/src/: gimbal_controller.cpp  main.cpp  ros_gimbal_state_bridge.cpp  serial_bridge.cpp
lora_drone_package/: README.md  package.xml  setup.py
lora_drone_package/docs/: ARCHITECTURE.md
lora_drone_package/launch/: bringup.launch.py
lora_drone_package/lora_drone_package/: e32_config.py  idempotency.py  lora_drone.py  lora_gimbal_bridge_node.py  mission_assembler.py  protocol.py  serial_link.py  telemetry.py  test_gimbal_rx.py
offboard_control/: CMakeLists.txt  README.md  package.xml
offboard_control/config/: params.yaml
offboard_control/docs/: ARCHITECTURE.md
offboard_control/include/offboard_control/: battery_monitor.hpp  carrot_follower.hpp  custom_mode.hpp  offboard_control.hpp  offboard_mode.hpp  setpoint_streamer.hpp  take_off.hpp  teleop.hpp  teleopExecutor.hpp  test.hpp
offboard_control/launch/: offboard_launch.py  teleop.launch.py
offboard_control/src/: battery_monitor.cpp  carrot_follower.cpp  custom_mode.cpp  offboard_control.cpp  offboard_mode.cpp  setpoint_streamer.cpp  take_off.cpp  teleop.cpp  teleopExecutor.cpp  test.cpp
skydroid/: CMakeLists.txt  package.xml
skydroid/config/: camera.yaml
skydroid/include/skydroid/: gimbal_node.hpp  skydroid_driver.hpp
skydroid/launch/: camera_launch.py
skydroid/skydroid/camera/: test.py
skydroid/skydroid/gimbal/: camera.py  driver.py  gimbal.py  protocol.py  test.py  transport.py
skydroid/src/: camera.cpp  camera_jetson.cpp  gimbal_main.cpp  gimbal_node.cpp  skydroid_driver.cpp
skydroid_msgs/: CMakeLists.txt  package.xml
skydroid_msgs/msg/: GimbalAttitude.msg  GimbalCommand.msg  GimbalState.msg
user_interface/: CMakeLists.txt  package.xml
user_interface/qt/: main.py
user_interface/qt/ui/: main.ui
